lab3/frontendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 3000
